--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "mysql2": "^2.1.0",
     "sequelize": "^5.22.3",
     "sequelize-cli": "^6.2.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
