--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     }
   },
   "keywords": [
-    "express-sequelize-swagger-starter"
+    "loker-backend"
   ],
   "author": "jhony-rainn",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "better-npm-run": "^0.1.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -40,15 +41,15 @@
     "express": "^4.17.1",
     "express-swagger-generator": "^1.1.17",
     "ip": "^1.1.5",
-    "mariadb": "^2.4.2",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.8.7",
-    "uuid": "^3.3.2",
     "jsonwebtoken": "^8.5.1",
-    "bcryptjs": "^2.4.3",
+    "mariadb": "^2.4.2",
+    "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.8.7",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -57,7 +58,6 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "nodemon": "^2.0.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^5.16.0",
@@ -65,6 +65,7 @@
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "nodemon": "^2.0.4"
   }
 }
